@@ -6,6 +6,8 @@ This file lists the changes in each six version.
 1.2.0
 -----
 
+- Add six.next() as an alias for six.advance_iterator().
+
 - Use the builtin next() function for advance_iterator() where is available
   (2.6+), not just Python 3.
 
